--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,18 @@
 /* write your override styles here */
+#wall .tag-1 {
+    display: none;
+}
+#wall #tag-2{
+    position: relative;
+}
+#wall #tag-4 {
+    background: url(../images/tag-4.png) no-repeat;
+    z-index: 6;
+    display: block;
+  }
+  div#wall .parent #tag-5.slick {
+    background: url(../images/tag-5.png) no-repeat;
+    z-index: 3;
+    display: none;
+  }
+  
